--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
    <tr>
     <td colspan="4">
-     <h2 align="center" class="idup">Menghitung Indeks Prestasi Ciken</h2>
+     <h2 align="center" class="idup">Menghitung Indeks Persentasi Vaksin</h2>
      <p  align="center">Total Kehadiran = 16 pertemuan</p>
     </td>
    </tr>
