--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>lat13.html</title>
+    <title>index.html</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="lat13.css"/>
-    <script src ="lat13.js" async></script>
+    <link rel="stylesheet" href="index.css"/>
+    <script src ="index.js" async></script>
 </head>
 <body><html>
 
